--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -32,11 +32,10 @@
 .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: rgb(12, 12, 12);
-    color: white;
-    padding: 10px;
+    background: #1b1b1b;
+    border: 1px solid rgba(141, 141, 141, 0.8);
+    color: #b4b5b8;
     min-height: 400px;
-    /* Center slide text vertically */
     border-radius: 15px;
     display: flex;
     margin-bottom: 50px;
@@ -51,8 +50,71 @@
     object-fit: cover;
 }
 
-.swiper-pagination-bullet{ 
+.swiper-pagination-bullet {
     width: 10px !important;
     height: 10px !important;
     opacity: 1 !important;
+}
+
+
+.sw-img {
+    object-position: top;
+    display: block;
+    max-height: 180px;
+    width: 100%;
+    border-radius: 15px 15px 0px 0px;
+
+}
+
+.sw-content {
+    padding: 10px;
+    margin-top: 15px;
+}
+
+.sw-h2 {
+    text-align: left;
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+    color: white;
+}
+
+.sw-p {
+    font-size: 0.9rem;
+    text-align: left;
+    margin-bottom: 10px;
+    letter-spacing: 1px;
+    line-height: 1.2rem;
+}
+
+.sw-div {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 20px 0px;
+}
+
+.sw-test {
+    padding: 0.6rem 0.8rem;
+    border-radius: 7px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    background-color: rgb(11, 159, 196);
+    color: white;
+    border: none;
+}
+
+.sw-github {
+    padding: 0.4rem 0.8rem;
+    border-radius: 7px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    background-color: rgb(11, 159, 196);
+    color: white;
+    border: none;
+}
+
+.sw-icon {
+    font-size: 1.3rem;
+    margin-right: 2px;
 }
