--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -33,7 +33,7 @@
     text-align: center;
     font-size: 18px;
     background: #1b1b1b;
-    border: 1px solid rgba(141, 141, 141, 0.8);
+    border: 1px solid rgba(141, 141, 141, 0.7);
     color: #b4b5b8;
     min-height: 400px;
     border-radius: 15px;
@@ -47,6 +47,7 @@
     display: block;
     width: 100%;
     height: 100%;
+    -o-object-fit: cover;
     object-fit: cover;
 }
 
@@ -58,6 +59,7 @@
 
 
 .sw-img {
+    -o-object-position: top;
     object-position: top;
     display: block;
     max-height: 180px;
@@ -122,8 +124,8 @@
     margin-right: 2px;
 }
 
-#sw-btns:hover{
+#sw-btns:hover {
     cursor: pointer;
     background-color: white;
-    color:  rgb(11, 159, 196);
+    color: rgb(11, 159, 196);
 }
